Align fix

--- a/styles/CommitDialog.less
+++ b/styles/CommitDialog.less
@@ -6,13 +6,12 @@
 		line-height: 1.4em;
 		max-height: 14em;
 		overflow: auto;
-		margin-bottom: 15px;
 
 		.file {
 			margin: 0 0 10px 0;
 
 			&:last-child {
-				margin: 0;
+				margin: 0 0 15px;
 			}
 
 			label.input-label {
